css/style.css
body{	
	height: 100vh;
	width: 100vw;
	overflow: hidden;
	margin: 0;
	background-color: #254555;
}

*{
	-webkit-tap-highlight-color: transparent;
}

::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: lightgrey;
    opacity: 1; /* Firefox */
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: white;
}

::-ms-input-placeholder { /* Microsoft Edge */
    color: white;
}

.wrapper{
	height: 100%;
	width: 100%;
	overflow: hidden;
}

#background-roller{
	position: fixed;
	top: 50vh;
	left: 50vw;
	transform: translate(-50%, -50%);
	display: none;
}

.navbar{
	height: 50px;
	width: 100%;
	position: fixed;
	left: 0;
	top: 0;
	background: #335C67;
	display: flex;
	justify-content: space-around;
	align-items: center;
	overflow: hidden;
	z-index: 2000;
}

.menuButton{
	color: white;
	display: none;
	cursor: pointer;
	user-select: none;
}

.controls{
    display: -webkit-flex; /* NEW */
    display: flex;
    -webkit-flex-wrap: wrap; /* NEW */
	justify-content: space-between;
	align-items: center;
	z-index: 300000000000000000000000000000000000000000000000000;
	opacity: 1;
	-webkit-transform: translate3d(0,0,0);
}

.control-divider{
	opacity: 0.5;
}

.toggleBox{
    display: -webkit-flex; /* NEW */
    display: flex;
    -webkit-flex-wrap: wrap; /* NEW */
	justify-content: space-between;
	align-items: center;	
}

.mobileLabels{
	display: none;
}

.input-idnumber{
	font-size: 1.5rem;
	padding: 0.5rem 1.5rem;
	font-family: 'Roboto Mono', monospace;
	border: 2px solid white;
	background: #335C67;
	border: 2px solid #335C67;
	width: 15rem;
	color: white;
}

.input-idnumber:focus{
	outline: 0;
}

.input-idnumber, .input-week{
	-webkit-transition: all 0.2s ease-in-out;
	transition: all 0.2s ease-in-out;
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	border-radius: 0;
}

.input-idnumber:focus, .input-week:focus, .input-idnumber:hover, .input-week:hover{
	background: white;
	border: 2px solid white;
	color: #335C67;
}

.input-week{
	font-size: 1.5rem;
	padding: 0.5rem 1.5rem;
	font-family: 'Roboto Mono', monospace;
	background: transparent;
	border: 2px solid transparent;
	width: 3rem;
	margin-left: 1rem;
	color: white;
}

.input-week:focus{
	outline: 0;
}

.input-label{
	color: white;
	font-family: 'Roboto', sans-serif;
	font-weight: 300;
	user-select: none;
	cursor: pointer;
	font-size: 2rem;
	margin-left: 1rem;
}

#input-day{
	display: none;
}

#input-day-label{
	padding: 0.5rem 1.5rem;
}

.timetable{
	position: absolute;
	top: 50px;
	left: 0;
	z-index: 1;
	transition: transform .1s ease-in-out;
}

.info{
	font-family: 'Roboto', sans-serif;
	font-weight: 300;
	height: 100vh;
	width: 100vw;
	position: fixed;
	bottom: 0;
	left: 0;
	padding: 5vh 5vh 15vh 5vh;
	box-sizing: border-box;
	overflow-y: scroll;
	z-index: 50000;
	background: white;
	color: black;
    word-wrap: break-word;
    display: none;
}

.infoClose{
	position: fixed;
	bottom: 5vh;
	left: 50%;
	transform: translateX(-50%);
	user-select: none;
	cursor: pointer;
	background: rgb(66, 133, 244); 
	border: 5px solid rgb(66, 133, 244);
	border-radius: 15px;
	color: white;
	padding: 1rem;
	z-index: 9999999999999999;
	-webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
	-moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
	box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
	text-transform: uppercase;
	white-space: nowrap;
}

.saveButton{
	margin: 0;
}

.savedIDs{
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	background-color: #335C67;
	border: 2px solid #335C67;
	padding: 1.5rem 3rem;
	overflow: hidden;
	color: white;
	font-family: "Open Sans", sans-serif;
	z-index: 300;
}

.savedList{
	list-style: none;
	padding: 0;
	z-index: 301;
}

.savedItems{
	padding: .5rem 1rem;
	background-color: white;
	border: 2px solid white;
	margin: 0;
	transition: all .2s ease-in-out;
	text-align: center;
	color: #335C67;
	width: 100%;
	margin-top: 1rem;
	cursor: pointer;
	user-select: none;
	box-sizing: border-box;
}

.savedItems:hover, .savedItems:focus{
	outline: none;
	background-color: #335C67;
	color: white;
}

#saveItem{
	padding: .5rem 1rem;
	background-color: #335C67;
	border: 2px solid #335C67;
	color: white;
	margin: 0;
	transition: all .2s ease-in-out;
	text-align: center;
}

#saveItem:hover, #saveItem:focus{
	outline: none;
	background-color: white;
	color: #335C67;
}

.clearSavedItems{
	padding: .5rem 1rem;
	background-color: #335C67;
	border: 2px solid #335C67;
	margin: 0;
	transition: all .2s ease-in-out;
	text-align: center;
	color: white;
	width: 100%;
	margin-top: 1rem;
	cursor: pointer;
	user-select: none;
}

.clearSavedItems:hover, .clearSavedItems:focus{
	outline: none;
	background-color: white;
	color: #335C67;
}

.loader-main{
	position: fixed;
	top: 0;
	left: 0;
	height: 100vh;
	width: 100vw;
	background-color: #335C67;
	display: flex;
	justify-content: space-around;
	align-items: center;
	flex-direction: column;
	z-index: 2000000;
}

.lds-roller {
  display: inline-block;
  position: relative;
  width: 64px;
  height: 64px;
}
.lds-roller div {
  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  transform-origin: 32px 32px;
}
.lds-roller div:after {
  content: " ";
  display: block;
  position: absolute;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background: #fff;
  margin: -3px 0 0 -3px;
}
.lds-roller div:nth-child(1) {
  animation-delay: -0.036s;
}
.lds-roller div:nth-child(1):after {
  top: 50px;
  left: 50px;
}
.lds-roller div:nth-child(2) {
  animation-delay: -0.072s;
}
.lds-roller div:nth-child(2):after {
  top: 54px;
  left: 45px;
}
.lds-roller div:nth-child(3) {
  animation-delay: -0.108s;
}
.lds-roller div:nth-child(3):after {
  top: 57px;
  left: 39px;
}
.lds-roller div:nth-child(4) {
  animation-delay: -0.144s;
}
.lds-roller div:nth-child(4):after {
  top: 58px;
  left: 32px;
}
.lds-roller div:nth-child(5) {
  animation-delay: -0.18s;
}
.lds-roller div:nth-child(5):after {
  top: 57px;
  left: 25px;
}
.lds-roller div:nth-child(6) {
  animation-delay: -0.216s;
}
.lds-roller div:nth-child(6):after {
  top: 54px;
  left: 19px;
}
.lds-roller div:nth-child(7) {
  animation-delay: -0.252s;
}
.lds-roller div:nth-child(7):after {
  top: 50px;
  left: 14px;
}
.lds-roller div:nth-child(8) {
  animation-delay: -0.288s;
}
.lds-roller div:nth-child(8):after {
  top: 45px;
  left: 10px;
}
@keyframes lds-roller {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}


@media only screen and (max-width: 820px) {
	body{
		position: fixed;
	}

	.wrapper{
		position: relative;
	}

	.navbar{
		white-space: nowrap;
		z-index: 2500;
		justify-content: space-between;
	}

	.menuButton{
		padding-right: 20px;
	}

	.input-idnumber{
		width: auto;
	}

	.controls{
		padding-top: 1vh;
		position: fixed;
		top: 50px;
		left: 0;
		width: 100vw;
		height: calc(100vh - 50px);
		flex-direction: column-reverse;
		align-items: center;
		justify-content: space-around;
		background: linear-gradient(rgba(51,92,103,1), rgba(51,92,103,0.75), rgba(51,92,103,0.75));
	}

	.mobileLabels{
		display: flex;
	}

	.desktopLabels{
		display: none;
	}

	.saveBox{
		display: flex;
	}

	.menuButton{
		display: inline-block;
	}

	.foodLink{
		text-decoration: none;
	}
}

@media only screen and (max-width: 620px) {
}

